--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love of my life</title>
     <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/background surprise/surprise1/background.css">
-    <link rel="stylesheet" href="/css/background surprise/surprise1/button.css">
+    <link rel="stylesheet" href="css/background surprise/surprise1/background.css">
+    <link rel="stylesheet" href="css/background surprise/surprise1/button.css">
 </head>
 <body>
     <canvas id="bgCanvas"></canvas>
