--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     
     <canvas id="terCanvas"></canvas>
 
-<script src="/css/background surprise/surprise1/script.js"></script>
+<script src="css/background surprise/surprise1/script.js"></script>
 </body>
 </html>
