--- a/anderson_e_karine.html
+++ b/anderson_e_karine.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love of my life</title>
+    <title>loveinmusic</title>
     <link rel="stylesheet" href="css/main 1/styles.css">
     <link rel="icon" href="images\favicon-32x32.png" type="image/x-icon">
     <style>
@@ -51,19 +51,19 @@ body {
     <div class="slideshow-container">
         <!-- Slides -->
         <div class="slide">
-          <img src="images/slide-line2.jpg" alt="Image 1">
+          <img src="images/01.jpg" alt="Image 1">
         </div>
         <div class="slide">
-          <img src="images/slide-line3.jpg" alt="Image 2">
+          <img src="images/02.jpg" alt="Image 2">
         </div>
         <div class="slide">
-          <img src="images/slide-line4.jpg" alt="Image 3">
+          <img src="images/03.jpg" alt="Image 3">
         </div>
         <div class="slide">
-          <img src="images/slide-line5.jpg" alt="Image 4">
+          <img src="images/04.jpg" alt="Image 4">
         </div>
         <div class="slide">
-          <img src="images/slide-line6.jpg" alt="Image 5">
+          <img src="images/05.jpg" alt="Image 5">
         </div>
       </div>
     
