--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love of my life</title>
+    <title>loveinmusic</title>
     <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="css/background surprise/surprise1/background.css">
     <link rel="stylesheet" href="css/background surprise/surprise1/button.css">
