--- a/anderson_e_karine.html
+++ b/anderson_e_karine.html
@@ -43,6 +43,11 @@ body {
     </style>
 </head>
 <body>
+
+  <script src="https://www.mercadopago.com.br/integrations/v1/web-payment-checkout.js"
+data-preference-id="565360807-c5f55dea-da8a-4b68-8919-0808a8c1ba79" data-source="button">
+</script>
+
     <audio id="romanticMusic" src="music/Ed Sheeran - Perfect.mp3" preload="auto"></audio>
     <header>
         <h1>10 de Dezembro de 2023</h1>
